# LARA-2023_Cpp-Fork-Detection

./: .gitignore  CMakeLists.txt  README.md  main.cpp
model/: yolov7.cpp
